refactor module clients

--- a/src/app/clients/client-customer/client-customer.component.html
+++ b/src/app/clients/client-customer/client-customer.component.html
@@ -2,7 +2,7 @@
   <mat-card>
     <div fxLayout="row wrap" fxLayout.lt-md="column" [formGroup]="formFilter">
       <mat-form-field fxFlex="18%">
-        <mat-label>Chi nhánh</mat-label>
+        <mat-label>{{ 'Client_Component.lableOffice'| translate}}</mat-label>
         <mat-select formControlName="officeId">
           <mat-option *ngFor="let office of offices" [value]="office.officeId">
             {{ office.name }}
@@ -12,7 +12,7 @@
 
         <div fxLayout="row wrap" fxLayout.lt-md="column">
           <mat-form-field fxFlex="18%">
-            <mat-label>Chi nhánh</mat-label>
+            <mat-label>{{ 'Client_Component.lableOffice'| translate}}</mat-label>
             <mat-select formControlName="officeId">
               <mat-option *ngFor="let office of offices" [value]="office.id">
                 {{ office.name }}
@@ -21,7 +21,7 @@
           </mat-form-field>
 
           <mat-form-field fxFlex="18%">
-            <mat-label>Nhân viên</mat-label>
+            <mat-label>{{ 'Client_Component.lableStaff'| translate}}</mat-label>
             <mat-select formControlName="staffId">
               <mat-option *ngFor="let type of staffs" [value]="type.userId">
                 {{ type.displayName }}
