--- a/src/app/clients/clients-view/charges/charges-overview/charges-overview.component.html
+++ b/src/app/clients/clients-view/charges/charges-overview/charges-overview.component.html
@@ -2,39 +2,39 @@
 
   <div style="margin-top: 5px;">
 
-    <h2> Charges Overview</h2>
+    <h2> {{'Client_Component.ViewClient.Charges.Charge.h2' |translate}}</h2>
 
     <table mat-table [dataSource]="dataSource">
 
       <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef> Name </th>
+        <th mat-header-cell *matHeaderCellDef> {{'Client_Component.ViewClient.Charges.Charge.name' |translate}} </th>
         <td mat-cell *matCellDef="let chargeOverviewData"><i class="fa fa-stop"
           [ngClass]="(!(chargeOverviewData.isWaived || chargeOverviewData.isPaid) )|statusLookup"></i>
           {{chargeOverviewData.name}} </td>
       </ng-container>
 
       <ng-container matColumnDef="dueAsOf">
-        <th mat-header-cell *matHeaderCellDef> Due as of </th>
+        <th mat-header-cell *matHeaderCellDef> {{'Client_Component.ViewClient.Charges.Charge.dueAsOf' |translate}} </th>
         <td mat-cell *matCellDef="let chargeOverviewData"> {{chargeOverviewData.dueDate|date}} </td>
       </ng-container>
 
       <ng-container matColumnDef="due">
-        <th mat-header-cell *matHeaderCellDef> Due </th>
+        <th mat-header-cell *matHeaderCellDef> {{'Client_Component.ViewClient.Charges.Charge.due' |translate}} </th>
         <td mat-cell *matCellDef="let chargeOverviewData"> {{chargeOverviewData.amount| money}} </td>
       </ng-container>
 
       <ng-container matColumnDef="paid">
-        <th mat-header-cell *matHeaderCellDef> Paid </th>
+        <th mat-header-cell *matHeaderCellDef> {{'Client_Component.ViewClient.Charges.Charge.paid' |translate}} </th>
         <td mat-cell *matCellDef="let chargeOverviewData"> {{chargeOverviewData.amountPaid| money}} </td>
       </ng-container>
 
       <ng-container matColumnDef="waived">
-        <th mat-header-cell *matHeaderCellDef> Waived </th>
+        <th mat-header-cell *matHeaderCellDef> {{'Client_Component.ViewClient.Charges.Charge.waived' |translate}} </th>
         <td mat-cell *matCellDef="let chargeOverviewData"> {{chargeOverviewData.amountWaived| money}} </td>
       </ng-container>
 
       <ng-container matColumnDef="outstanding">
-        <th mat-header-cell *matHeaderCellDef> Outstanding </th>
+        <th mat-header-cell *matHeaderCellDef> {{'Client_Component.ViewClient.Charges.Charge.outstanding' |translate}} </th>
         <td mat-cell *matCellDef="let chargeOverviewData"> {{chargeOverviewData.amountOutstanding| money}} </td>
       </ng-container>
 
